--- a/template/iCMS/public.common.htm
+++ b/template/iCMS/public.common.htm
@@ -102,6 +102,7 @@
     <div class="iCMS_favorite_dialog">
       <div class="favorite_list">
         <div class="favorite_list_content">
+          <img src="<!--{$site.urls.ui}-->/img/loading.gif" /> 加载中,请稍侯......
         </div>
         <div class="buttons clearfix mt15">
           <a class="create fl" href="javascript:;">+ 创建收藏夹</a>
