--- a/app/admincp/ui/admincp-6.0.0.css
+++ b/app/admincp/ui/admincp-6.0.0.css
@@ -1,4 +1,4 @@
-body { background-color: #EDEDED; color: #000; }
+body { background-color: #EDEDED; color: #000;}
 /* bootstrap */
 .btn, .add-on, .navbar-inner, .label, .navbar a, .switch-left, .switch-right { background-image: none !important; -webkit-box-shadow: none !important; -moz-box-shadow: none !important; box-shadow: none !important; }
 .form-inline input, .form-inline textarea, .form-inline select { color: #1A1A1A !important; }
@@ -35,7 +35,6 @@ body { background-color: #EDEDED; color: #000; }
 #modal-iframeFix { top: 0px; left: 0px; width: 100%; height: 100%; background: #fff; position: absolute; opacity: 0.001; zIndex: 1000; display: none; }
 #modal-overlay { position: fixed; top: 0px; left: 0px; z-index: 100; width: 100%; height: 100%; background-color: #000; opacity: 0.75; -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=75)"; filter: alpha(opacity=75); -moz-opacity: 0.75; }
 
-
 /* chosen */
 .chosen-container-single .chosen-single { background-image: none !important; -webkit-box-shadow: none !important; -moz-box-shadow: none !important; box-shadow: none !important; }
 .input-prepend .chosen-container-single .chosen-single { -webkit-border-top-left-radius: 0; -moz-border-radius-topleft: 0; border-top-left-radius: 0; -webkit-border-bottom-left-radius: 0; -moz-border-radius-bottomleft: 0; border-bottom-left-radius: 0; }
@@ -45,6 +44,21 @@ body { background-color: #EDEDED; color: #000; }
 .chosen-container-single .chosen-single div b { background-position-y: 5px; }
 /* uniform */
 .add-on .checker { margin-right: 0px; margin-bottom: 4px; }
+/* dialog */
+
+.iCMS_dialog .ui-dialog-header {
+	background-color: #333;
+	background-image: -moz-linear-gradient(top, #3c3c3c, #0a0a0a);
+	background-image: -ms-linear-gradient(top, #3c3c3c, #0a0a0a);
+	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#3c3c3c), to(#0a0a0a));
+	background-image: -webkit-linear-gradient(top, #3c3c3c, #0a0a0a);
+	background-image: -o-linear-gradient(top, #3c3c3c, #0a0a0a);
+	background-image: linear-gradient(top, #3c3c3c, #0a0a0a);
+	background-repeat: repeat-x; filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#3c3c3c', endColorstr='#0a0a0a', GradientType=0);
+	border: 1px solid #111;
+}
+.iCMS_dialog .ui-dialog-header .ui-dialog-close{color: #999;opacity: .4;font-weight:normal; filter: alpha(opacity=40);}
+.iCMS_dialog .ui-dialog-header .ui-dialog-close:hover, .iCMS_dialog .ui-dialog-header .ui-dialog-close:focus {opacity: 0.7; filter: alpha(opacity=70); }
 /* iCMS */
 #header { display: block; position: relative; margin: 0; background-color: #f8f8f8; background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f8f8f8), to(#e2e2e2)); background-image: -webkit-linear-gradient(top, #f8f8f8, #e2e2e2); background-image: -webkit-gradient(linear, top left, bottom left, from(#f8f8f8), to(#e2e2e2)); background-image: -webkit-linear-gradient(top, #f8f8f8, #e2e2e2); background-image: linear-gradient(to bottom, #f8f8f8, #e2e2e2); background-repeat: repeat-x; }
 #header .navbar-inner { background-image: none; padding-right: 0; padding-left: 8px; background-color: #f8f8f8; -webkit-box-shadow: aliceblue; -moz-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1); box-shadow: none; }
