--- a/template/iCMS/user/manage/publish.htm
+++ b/template/iCMS/user/manage/publish.htm
@@ -29,7 +29,8 @@ iCMS.config.UI        = '<!--{$iCMS.UI}-->';
       <div class="clearfix mb10"></div>
       <div class="input-prepend input-append"> <span class="add-on">标 题</span>
         <input class="span6" name="title" id="title" type="text" value="<!--{$article.title}-->">
-        <div class="btn-group" id="btn-group"> <a class="btn dropdown-toggle" data-toggle="dropdown" tabindex="-1"> <span class="caret"></span> <span id="uc_select">默认分类</span></a>
+        <div class="btn-group" id="user_category">
+          <a class="btn dropdown-toggle" data-toggle="dropdown" tabindex="-1"> <span class="caret"></span> <span id="uc_select">默认分类</span></a>
           <ul class="dropdown-menu">
             <!--{iCMS:user:category loop="true" userid="$user.uid" appid="$iCMS.APPID.ARTICLE"}-->
             <li><a href="javascript:;" cid="<!--{$user_category.cid}-->" class="user_category"><!--{$user_category.name}--></a></li>
@@ -64,7 +65,7 @@ iCMS.config.UI        = '<!--{$iCMS.UI}-->';
       </div>
     </div>
   </form>
-  <div id="add_category-box" style="display: none;">
+  <div id="add_category_box" style="display: none;">
     <input class="span3" id="newcategoryname" type="text" placeholder="请输入分类名称">
   </div>
   <script type="text/javascript">
@@ -122,39 +123,39 @@ $(function(){
         return false;
     });
     $('#add_category').click(function() {
-  		iCMS.dialog({
-  		    follow: document.getElementById('btn-group'),
-  		    title: '添加新分类',
-  		    content: document.getElementById('add_category-box'),
-  		    button: [{
-  		    	id: 'add_category-btn',
-  		    	value: '添加',
-  				callback: function () {
-  			        var a = $("#newcategoryname"),n = a.val(),d=this;
-  			        if(n==""){
-  			        	alert("请输入分类名称!");
-  			        	a.focus();
-  			        	return false;
-  			        }else{
-  			        	$.post('<!--{iCMS:router url='/user'}-->',{'action': 'add_category',name:n},
-  			        	function(j){
-  			        		if(j.code){
-  				        		d.content(j.msg)
-  			        			.button({id: 'add_category-btn',value: '完成',
-	  			        			callback: function () {
-	  			        				$("#user_category_0").before('<li><a href="javascript:;" cid="'+j.forward+'" class="user_category">'+n+'</a></li>');
-	  			        			}
-  			        			});
-  			        		}else{
-  			        			alert(j.msg);
-  			        			a.focus();
-  			        			return false;
-  			        		}
-  			        	},"json");
-  			        }
-  			        return false;
-  				}}]
-  		});
+      iCMS.dialog({
+          follow: document.getElementById('user_category'),
+          title: '添加新分类',
+          content: document.getElementById('add_category_box'),
+          okValue:'添加',
+          ok: function () {
+            var a = $("#newcategoryname"),n = a.val(),d=this;
+            if(n==""){
+              iCMS.alert("请输入分类名称!");
+              a.focus();
+              return false;
+            }else{
+              $.post('<!--{iCMS:router url='/user'}-->',{'action': 'add_category',name:n},
+              function(j){
+                if(j.code){
+                  d.content(j.msg)
+                  .button([{
+                    value: '完成',
+                    callback: function () {
+                      $("#user_category_0").before('<li><a href="javascript:;" cid="'+j.forward+'" class="user_category">'+n+'</a></li>');
+                    },autofocus: true
+                  }]);
+                }else{
+                  alert(j.msg);
+                  a.focus();
+                  return false;
+                }
+              },"json");
+            }
+            return false;
+          }
+      });
+
     });
 
 });
