--- a/template/iCMS/user/home.article.htm
+++ b/template/iCMS/user/home.article.htm
@@ -16,7 +16,7 @@
         <div class="list_fun clearfix" data-param='<!--{$article_list.param|json_encode}-->'>
           <a href="javascript:;" data-param='{"do":"good"}' class="iCMS_article_do" title="给你32个赞"><i class="fa fa-thumbs-o-up"></i> (<span class="iCMS_good_num"><!--{$article_list.good}--></span>)</a>
           <a href="javascript:;" data-param='{"do":"comment"}' class="iCMS_article_do" title="评论"><i class="fa fa-comment-o"></i> (<span class="iCMS_comment_num"><!--{$article_list.comments}--></span>)</a>
-          <a href="javascript:;" data-param='{"do":"favorite"}' class="iCMS_article_do" title="收藏到..."><i class="fa fa-bookmark-o"></i> (<span class="iCMS_favorite_num"><!--{$article_list.favorite}--></span>)</a> </div>
+          <a href="javascript:;" data-param='{"do":"favorite"}' class="iCMS_article_do" title="添加到收藏夹"><i class="fa fa-bookmark-o"></i> (<span class="iCMS_favorite_num"><!--{$article_list.favorite}--></span>)</a> </div>
       </li>
       <!--{iCMSelse}-->
       <li class="clearfix">暂无内容</li>
