--- a/template/iCMS/user/home.htm
+++ b/template/iCMS/user/home.htm
@@ -37,11 +37,8 @@
     </div>
     <div class="user_nav_wrap">
       <ul class="nav_list">
-        <li<!--{if $iCMS.APP.DO=="home"}--> class="c"<!--{/if}-->><a href="<!--{$user.urls.home}-->" title="文章"><i class="fa fa-file-text-o"></i> 文章</a>
-        </li>
-        <li<!--{if $iCMS.APP.DO=="favorite"}--> class="c"<!--{/if}-->> <a href="<!--{$user.urls.favorite}-->" title="收藏"><i class="fa fa-bookmark"></i> 收藏</a>
-        </li>
-        <li> <a href="<!--{$user.urls.share}-->" title="分享" class="nav_icon icon_sha">分享</a></li>
+        <li<!--{if $iCMS.APP.DO=="home"}--> class="c"<!--{/if}-->><a href="<!--{$user.urls.home}-->" title="文章"><i class="fa fa-file-text-o"></i> 文章</a></li>
+        <li<!--{if $iCMS.APP.DO=="favorite"}--> class="c"<!--{/if}-->> <a href="<!--{$user.urls.favorite}-->" title="收藏"><i class="fa fa-bookmark"></i> 收藏</a></li>
       </ul>
     </div>
     <div class="main-col">
@@ -49,10 +46,10 @@
       <h3 class="category_name"><span class="label label-info"><!--{$user.category.name}--></span></h3>
       <!--{/if}-->
       <!--{if $iCMS.APP.DO=="home"}-->
-      <!--{include file="./home.article.htm"}-->
+        <!--{include file="./home.article.htm"}-->
       <!--{/if}-->
       <!--{if $iCMS.APP.DO=="favorite"}-->
-      <!--{include file="./home.favorite.htm"}-->
+        <!--{include file="./home.favorite.htm"}-->
       <!--{/if}-->
       <div id="artpagenav" class="iCMS_pagination">
         <!--{$iCMS.PAGE.NAV}-->
