--- a/app/admincp/ui/admincp-6.0.0.css
+++ b/app/admincp/ui/admincp-6.0.0.css
@@ -1,4 +1,4 @@
-body { background-color: #EDEDED; color: #000;}
+body { background-color: #EDEDED; color: #000; }
 /* bootstrap */
 .btn, .add-on, .navbar-inner, .label, .navbar a, .switch-left, .switch-right { background-image: none !important; -webkit-box-shadow: none !important; -moz-box-shadow: none !important; box-shadow: none !important; }
 .form-inline input, .form-inline textarea, .form-inline select { color: #1A1A1A !important; }
@@ -16,11 +16,10 @@ body { background-color: #EDEDED; color: #000;}
 .nav-tabs { margin-bottom: 0px; }
 .input-append a.btn { border: 1px solid #ccc !important; }
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .btn-primary.disabled, .btn-primary[disabled] { background-color: #08c; }
-/*bootstrap admincp*/
+/* bootstrap admincp */
 .table th { background: #fafafa url("table_head.gif") repeat-x 0 100%; }
 .table td { background-color: #fff; }
 .table tbody .checker { margin-left: 3px !important; }
-
 /* modal */
 .modal { z-index: 9999 !important; margin: 0px !important; display: none; }
 .modal .modal-header { padding: 3px 15px; -webkit-border-top-left-radius: 4px; -webkit-border-top-right-radius: 4px; -moz-border-radius-topleft: 4px; -moz-border-radius-topright: 4px; border-top-left-radius: 4px; border-top-right-radius: 4px; }
@@ -34,7 +33,6 @@ body { background-color: #EDEDED; color: #000;}
 #modal-iframe { top: 0px; left: 0px; width: 100%; height: 100%; }
 #modal-iframeFix { top: 0px; left: 0px; width: 100%; height: 100%; background: #fff; position: absolute; opacity: 0.001; zIndex: 1000; display: none; }
 #modal-overlay { position: fixed; top: 0px; left: 0px; z-index: 100; width: 100%; height: 100%; background-color: #000; opacity: 0.75; -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=75)"; filter: alpha(opacity=75); -moz-opacity: 0.75; }
-
 /* chosen */
 .chosen-container-single .chosen-single { background-image: none !important; -webkit-box-shadow: none !important; -moz-box-shadow: none !important; box-shadow: none !important; }
 .input-prepend .chosen-container-single .chosen-single { -webkit-border-top-left-radius: 0; -moz-border-radius-topleft: 0; border-top-left-radius: 0; -webkit-border-bottom-left-radius: 0; -moz-border-radius-bottomleft: 0; border-bottom-left-radius: 0; }
@@ -45,20 +43,9 @@ body { background-color: #EDEDED; color: #000;}
 /* uniform */
 .add-on .checker { margin-right: 0px; margin-bottom: 4px; }
 /* dialog */
-
-.iCMS_dialog .ui-dialog-header {
-	background-color: #333;
-	background-image: -moz-linear-gradient(top, #3c3c3c, #0a0a0a);
-	background-image: -ms-linear-gradient(top, #3c3c3c, #0a0a0a);
-	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#3c3c3c), to(#0a0a0a));
-	background-image: -webkit-linear-gradient(top, #3c3c3c, #0a0a0a);
-	background-image: -o-linear-gradient(top, #3c3c3c, #0a0a0a);
-	background-image: linear-gradient(top, #3c3c3c, #0a0a0a);
-	background-repeat: repeat-x; filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#3c3c3c', endColorstr='#0a0a0a', GradientType=0);
-	border: 1px solid #111;
-}
-.iCMS_dialog .ui-dialog-header .ui-dialog-close{color: #999;opacity: .4;font-weight:normal; filter: alpha(opacity=40);}
-.iCMS_dialog .ui-dialog-header .ui-dialog-close:hover, .iCMS_dialog .ui-dialog-header .ui-dialog-close:focus {opacity: 0.7; filter: alpha(opacity=70); }
+.iCMS_dialog .ui-dialog-header { background-color: #333; background-image: -moz-linear-gradient(top, #3c3c3c, #0a0a0a); background-image: -ms-linear-gradient(top, #3c3c3c, #0a0a0a); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#3c3c3c), to(#0a0a0a)); background-image: -webkit-linear-gradient(top, #3c3c3c, #0a0a0a); background-image: -o-linear-gradient(top, #3c3c3c, #0a0a0a); background-image: linear-gradient(top, #3c3c3c, #0a0a0a); background-repeat: repeat-x; filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#3c3c3c', endColorstr='#0a0a0a', GradientType=0); border: 1px solid #111; }
+.iCMS_dialog .ui-dialog-header .ui-dialog-close { color: #999; opacity: .4; font-weight: normal; filter: alpha(opacity=40); }
+.iCMS_dialog .ui-dialog-header .ui-dialog-close:hover, .iCMS_dialog .ui-dialog-header .ui-dialog-close:focus { opacity: 0.7; filter: alpha(opacity=70); }
 /* iCMS */
 #header { display: block; position: relative; margin: 0; background-color: #f8f8f8; background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f8f8f8), to(#e2e2e2)); background-image: -webkit-linear-gradient(top, #f8f8f8, #e2e2e2); background-image: -webkit-gradient(linear, top left, bottom left, from(#f8f8f8), to(#e2e2e2)); background-image: -webkit-linear-gradient(top, #f8f8f8, #e2e2e2); background-image: linear-gradient(to bottom, #f8f8f8, #e2e2e2); background-repeat: repeat-x; }
 #header .navbar-inner { background-image: none; padding-right: 0; padding-left: 8px; background-color: #f8f8f8; -webkit-box-shadow: aliceblue; -moz-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1); box-shadow: none; }
@@ -135,7 +122,7 @@ td.ordernum input { width: 30px; text-align: center; padding: 2px; margin-bottom
 #sidebar > ul > li.active > a > i { opacity: 1 !important; }
 #sidebar > ul > li > a > .label { margin: 0 20px 0 0; float: right; padding: 3px 5px 2px; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5) inset, 0 1px 0 rgba(255, 255, 255, 0.2); }
 #sidebar > ul ul { display: none; margin: 0; padding: 0; box-shadow: 0 0 3px rgba(0, 0, 0, 0.5) inset; }
-#sidebar > ul ul li.divider {height: 4px;border-bottom: 1px solid #7A7A7A;margin: 0px 12px;}
+#sidebar > ul ul li.divider { height: 4px; border-bottom: 1px solid #7A7A7A; margin: 0px 12px; }
 #sidebar > ul li.open ul { display: block; }
 #sidebar > ul ul li a { padding: 10px 0 10px 25px; display: block; color: #777777; }
 #sidebar > ul ul li:first-child a { border-top: 0; }
@@ -262,9 +249,9 @@ color: #666666; }
 .widget-title h5 { color: #666666; text-shadow: 0 1px 0 #ffffff; float: left; font-size: 14px; font-weight: bold; padding: 12px; line-height: 14px; margin: 0; }
 .widget-title .brs { border-right: 1px solid #DDDDDD; }
 .widget-title .buttons { float: right; margin: 8px 10px 0 0; }
-.widget-title .label{padding: 2px 5px;margin: 0 4px 4px 0; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3) inset, 0 1px 0 #ffffff; }
-.widget-title .badge {float: right;padding: 3px 5px 2px;  margin: 9px 15px 0 0; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3) inset, 0 1px 0 #ffffff; }
-.widget-calendar .widget-title .label { margin-right: 190px; float: right;}
+.widget-title .label { padding: 2px 5px; margin: 0 4px 4px 0; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3) inset, 0 1px 0 #ffffff; }
+.widget-title .badge { float: right; padding: 3px 5px 2px; margin: 9px 15px 0 0; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3) inset, 0 1px 0 #ffffff; }
+.widget-calendar .widget-title .label { margin-right: 190px; float: right; }
 .widget-content { padding: 12px 15px; border-bottom: 1px solid #cdcdcd; }
 .widget-box.widget-plain .widget-content { padding: 12px 0 0; }
 .widget-box.collapsible .collapse.in .widget-content { border-bottom: 1px solid #CDCDCD; }
@@ -414,7 +401,6 @@ form { margin-bottom: 0; }
 .popover .content-big { font-size: 14px; font-weight: bold; }
 .popover .content-small { font-size: 11px; color: #777777; }
 /* Responsive design */
-
 @media (max-width:480px) {
 	#header h1 { top: auto; left: auto; margin: 3px auto; }
 	#user-nav { position: relative; left: auto; right: auto; width: 100%; margin-top: -43px; margin-bottom: 43px; }
